--- a/oppo-admin/vue-element-admin/src/assets/css/reset.css
+++ b/oppo-admin/vue-element-admin/src/assets/css/reset.css
@@ -18,3 +18,11 @@ body{
     font-size: 14px;
     background-color: #f5f5f5;
 }
+/* 解决cascader级联样式表超出屏幕的问题 */
+.el-cascader-panel {
+    height: 210px;
+}
+/* 隐藏cascader级联样式表横向滚动条 */
+.el-scrollbar__wrap {
+    overflow-x: hidden;
+  }
