--- a/oppo-web-ui/css/index.css
+++ b/oppo-web-ui/css/index.css
@@ -1,15 +1,3 @@
-/* 手机屏幕宽度
-    720px
-    1080px
-    1440px
-
-    电脑屏幕分辨率
-    1280x720
-    1920x1080
-    2560x1440
-    3840x2160
-
-*/
 .body {
     font-family: 'OPPOSans';
     /* background-color: red; */
@@ -31,14 +19,14 @@
     font-style: normal;
 }
 
-@font-face {
+/* @font-face {
     font-family: 'iconfont';
     src: url('//at.alicdn.com/t/font_3187659_y5l5k2om4e.eot');
     src: url('//at.alicdn.com/t/font_3187659_y5l5k2om4e.eot?#iefix') format('embedded-opentype'),
         url('') format('woff'),
         url('//at.alicdn.com/t/font_3187659_y5l5k2om4e.ttf') format('truetype'),
         url('//at.alicdn.com/t/font_3187659_y5l5k2om4e.svg#iconfont') format('svg');
-}
+} */
 
 /* 导航条 */
 .navbar {
