引入ColorThief和TextColor两个插件（暂时未使用），更换回使用Bootstrap的轮播图（js有冲突）

--- a/oppo-web-ui/oppo-web-vue/src/assets/css/index.css
+++ b/oppo-web-ui/oppo-web-vue/src/assets/css/index.css
@@ -18,8 +18,8 @@
 .btn {
     border-radius: 0px !important;
     color: white !important;
-    background-color: black !important;
-    border-color: black !important;
+    background-color: black ;
+    border-color: black;
 }
 
 
